# yop2p

./: .travis.yml  CMakeLists.txt  README.rst  clean.sh
include/yop2p/: jpsock.hpp  msgstruct.hpp  peer.hpp  socket.hpp  socks.hpp  thdq.hpp
src/: jpsock.cpp  peer.cpp  socket.cpp
test/simple01/: main.cpp
