cmake_minimum_required(VERSION 3.7)
include(CheckCXXCompilerFlag)
project(yop2p VERSION 0.0.1 LANGUAGES CXX)
add_executable(testp2p "test/simple01/main.cpp" )
add_library(SourceFiles src/peer.cpp)
set(MAIN_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(testp2p PUBLIC ${MAIN_INCLUDE_PATH})
target_include_directories(SourceFiles PUBLIC ${MAIN_INCLUDE_PATH})
target_compile_features(testp2p PRIVATE cxx_std_17)
target_link_libraries(testp2p SourceFiles)
set(CMAKE_CXX_FLAGS "-std=c++17")
CHECK_CXX_COMPILER_FLAG(-std=c++17 HAVE_C17)
